# tutor-agent

./: .env.example  .gitignore  README.md  __init__.py  idea.md  main.py  makefile  pyproject.toml  pytest.ini  requirements.txt  subtopics.json
.cursor/rules/: python-langchain-ai.mdc
api/: auth_routes.py  essay_routes.py  exam_routes.py  quiz_routes.py  routes.py
chainlang_tool/: human_assistance.py
commands/: __init__.py  chat.py  chat_math_team.py  chat_with_supervisor.py  display_graph.py  graph_chat_react_agent.py  human_chat.py  init_embedding.py  planner.py  researcher.py  session_chat.py  state_chat.py  structured_output_ai_agent.py  structured_output_different_models.py  structured_output_flexible_prompt.py  structured_output_native_binding.py  structured_output_pydantic_prompt.py
config/: __init__.py  settings.py
core/: __init__.py  answer_evaluator.py  document_analyzer.py  document_processor.py  essay_generator.py  exam_generator.py  exam_generator_demo.py  hierrachical_map_reduce.py  mc_generator.py
core/multi_agent/researcher/: researcher.py
core/pre_trained_model/: __init__.py  config.py  deepseek.py  google_gemini_api.py  google_gemma.py  llama_3_2.py  phi35mini.py
db/: __init__.py  chroma_embedding.py  essay_repository.py  exam_repository.py  mc_quiz_respository.py  mongo.py  user_repository.py
docs/: DocumentAnalysis.md  ModelComparision2.md  ModelSummary.md  idea.md
langchain_tool/: human_assistance.py
models/: __init__.py  base.py  document_info.py  essay.py  evaluator.py  exam.py  planner.py  state.py  topic.py  topic_mc_quiz.py  user.py
multi_agent/: __init__.py  reflector_with_structured_output.py  researcher.py  state_manager.py  top_supervisor.py
multi_agent/math/: __init__.py  deep_math.py  math_expert.py  math_graph.py  quick_math.py
multi_agent/prompt/: sample.py
multi_agent/reasoner/: deep_reasoner.py  reasoner_graph.py
multi_agent/researcher/: researcher.py  researcher_graph.py
pre-trained-model/: __init__.py  deepseek.py
pre_trained_model/: __init__.py  deepseek.py  google_gemma.py  phi35mini.py
retrievers/: __init__.py  arxiv.py  duckduckgo.py  google.py  tavily.py  wikipedia.py
services/: __init__.py  auth.py  chatbot.py  deep_reasoner.py  planner.py  publisher.py  reflector_with_structured_output.py  researcher.py  router.py  state_manager.py  stateful_chatbot.py
tests/: __init__.py  test_planner.py  test_retrievers.py
tools/base/: base_tool.py
tools/retrievers/: __init__.py  duckduckgo.py  google.py  wikipedia.py
tutor_agent/: main.py
tutor_agent/core/: __init__.py  answer_evaluator.py  exam_session.py  question_generator.py  vector_store.py
utils/: __init__.py  generate_graph.py  logger.py  time.py
