[project]
name = "tutor-agent"
version = "0.1.0"
description = "An AI tutor agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "langchain",
    "openai",
    "faiss-cpu",
    "arxiv",
    "googlesearch-python",
    "python-dotenv",
    "langchain_openai",
    "wikipedia",
    "anyio",
    "pytest-asyncio",
    "pytest-tornasync",
    "pytest-trio",
    "langgraph>=0.2.71",
    "IPython",
    "graphviz",
    "langchain-community",
    "grpcio",
    "grpcio-status",
    "duckduckgo-search",
    "black",
    "langchain_google_genai",
    "langgraph-supervisor",
    "numexpr==2.10.2",
    "jupyter",
    "markdown-text-clean",
    "torch==2.2.2",
    "torchaudio==2.2.2",
    "torchvision==0.17.2",
    "transformers==4.47.0",
    "sentence-transformers==3.4.1",
    "langchain-huggingface==0.1.2",
    "python-multipart",
    "numpy==1.26.4",
    "pypdf"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''