[project]
name = "tutor-agent"
version = "0.1.0"
description = "An AI tutor agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "langchain",
    "openai",
    "faiss-cpu",
    "arxiv",
    "googlesearch-python",
    "python-dotenv",
    "langchain_openai",
    "wikipedia",
    "anyio",
    "pytest-asyncio",
    "pytest-tornasync",
    "pytest-trio",
    "langgraph>=0.2.71",
    "IPython",
    "graphviz",
    "langchain-community",
    "grpcio",
    "grpcio-status",
    "duckduckgo-search",
    "black",
    "langchain_google_genai",
    "langgraph-supervisor",
    "numexpr==2.10.2",
    "jupyter",
    "markdown-text-clean",
    "torch==2.3.1",
    "torchaudio",
    "torchvision",
    "transformers==4.50.0",
    "sentence-transformers",
    "langchain-huggingface",
    "python-multipart",
    "numpy",
    "pypdf",
    "accelerate>=0.26.0",
    "pymongo",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''